[gd_scene load_steps=18 format=2]

[ext_resource path="res://Pic/bc911.png" type="Texture" id=1]
[ext_resource path="res://Fonts/1.5Pressed.tres" type="StyleBox" id=2]
[ext_resource path="res://fonts/font8.tres" type="DynamicFont" id=3]
[ext_resource path="res://Pic/map.png" type="Texture" id=4]
[ext_resource path="res://Fonts/1.5Normal.tres" type="StyleBox" id=5]
[ext_resource path="res://fonts/font9.tres" type="DynamicFont" id=6]
[ext_resource path="res://fonts/NotoSansTC-VariableFont_wght.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://fonts/答案.tres" type="StyleBox" id=8]
[ext_resource path="res://fonts/答案字.tres" type="DynamicFont" id=9]
[ext_resource path="res://fonts/詳解字.tres" type="DynamicFont" id=10]
[ext_resource path="res://fonts/詳解.tres" type="StyleBox" id=11]
[ext_resource path="res://script/1.5.1.gd" type="Script" id=12]
[ext_resource path="res://pic/delete1.png" type="Texture" id=13]
[ext_resource path="res://Fonts/1.5hover.tres" type="StyleBox" id=14]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 1
outline_color = Color( 0, 1, 0.0156863, 1 )
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.282353, 0.937255, 0.478431, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Node2D" type="Node2D"]
script = ExtResource( 12 )

[node name="bg" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
expand = true

[node name="TextureRect" type="TextureRect" parent="bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -799.0
margin_top = -580.0
margin_right = -218.0
margin_bottom = 40.0
rect_scale = Vector2( 2.8, 2.3 )
texture = ExtResource( 4 )
expand = true

[node name="大橫線" type="Line2D" parent="bg/TextureRect"]
position = Vector2( 335.069, 62.6296 )
scale = Vector2( -1.59461, 0.76087 )
points = PoolVector2Array( -98, 100, 160, 100 )
width = 1.0
default_color = Color( 0.654902, 0.654902, 0.670588, 1 )

[node name="短線" type="Line2D" parent="bg/TextureRect"]
position = Vector2( 331.497, 62.6296 )
scale = Vector2( -1.59461, 0.76087 )
points = PoolVector2Array( 54, 100, 107, 100 )
width = 4.0
default_color = Color( 0, 0.345098, 1, 1 )

[node name="content" type="Button" parent="bg"]
margin_left = 388.0
margin_top = 193.0
margin_right = 618.0
margin_bottom = 268.0
custom_colors/font_color_disabled = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_focus = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_hover = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_pressed = Color( 0.6, 0.6, 0.6, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "故 事 內 容"

[node name="wave1" type="Button" parent="bg"]
margin_left = 616.0
margin_top = 193.0
margin_right = 846.0
margin_bottom = 268.0
custom_colors/font_color_disabled = Color( 0, 0.345098, 1, 1 )
custom_colors/font_color_focus = Color( 0, 0.345098, 1, 1 )
custom_colors/font_color = Color( 0, 0.345098, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.345098, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.345098, 1, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "wave 1"

[node name="wave2" type="Button" parent="bg"]
margin_left = 844.0
margin_top = 193.0
margin_right = 1074.0
margin_bottom = 268.0
custom_colors/font_color_disabled = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_focus = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_hover = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_pressed = Color( 0.6, 0.6, 0.6, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "wave 2"

[node name="wave3" type="Button" parent="bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 112.0
margin_top = -347.0
margin_right = 342.0
margin_bottom = -272.0
custom_colors/font_color_disabled = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_focus = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_hover = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_pressed = Color( 0.6, 0.6, 0.6, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "wave 3"

[node name="score" type="Button" parent="bg"]
margin_left = 1300.0
margin_top = 193.0
margin_right = 1530.0
margin_bottom = 268.0
custom_colors/font_color_disabled = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_focus = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_hover = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_pressed = Color( 0.6, 0.6, 0.6, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "score"

[node name="回答" type="Label" parent="bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -295.0
margin_right = -25.0
margin_bottom = -243.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "回答："

[node name="正確" type="Label" parent="bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -23.0
margin_top = -304.0
margin_right = 127.0
margin_bottom = -231.0
custom_colors/font_color = Color( 0, 1, 0.0156863, 1 )
custom_colors/font_color_shadow = Color( 0, 1, 0.0156863, 1 )
custom_fonts/font = SubResource( 2 )
text = "正確 ✓"

[node name="問題" type="Label" parent="bg"]
margin_left = 301.0
margin_top = 327.0
margin_right = 1659.0
margin_bottom = 481.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 9 )
custom_styles/normal = ExtResource( 8 )
text = "請問下列何者昨天和侯程麟去遊樂園玩?"
align = 1
valign = 1
autowrap = true

[node name="A" type="Label" parent="bg"]
margin_left = 303.0
margin_top = 628.0
margin_right = 943.0
margin_bottom = 728.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 9 )
custom_styles/normal = ExtResource( 8 )
text = "C. 金玟池"
align = 1
valign = 1

[node name="correct" type="Label" parent="bg"]
margin_left = 1019.0
margin_top = 509.0
margin_right = 1659.0
margin_bottom = 609.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 9 )
custom_styles/normal = SubResource( 3 )
text = "B. 李多慧"
align = 1
valign = 1

[node name="C" type="Label" parent="bg"]
margin_left = 303.0
margin_top = 509.0
margin_right = 943.0
margin_bottom = 609.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 9 )
custom_styles/normal = ExtResource( 8 )
align = 1
valign = 1

[node name="D" type="Label" parent="bg"]
margin_left = 1019.0
margin_top = 628.0
margin_right = 1659.0
margin_bottom = 728.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 9 )
custom_styles/normal = ExtResource( 8 )
text = "D. 許瑋甯"
align = 1
valign = 1

[node name="詳解" type="RichTextLabel" parent="bg"]
margin_left = 301.0
margin_top = 750.0
margin_right = 1659.0
margin_bottom = 935.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 10 )
custom_styles/normal = ExtResource( 11 )
text = "詳解：侯程麟昨天跟李多慧去遊樂園玩！不可置信！"

[node name="cross" type="Button" parent="bg"]
margin_left = 1789.0
margin_top = 30.0
margin_right = 2301.0
margin_bottom = 536.0
rect_scale = Vector2( 0.2, 0.2 )
icon = ExtResource( 13 )
flat = true

[connection signal="pressed" from="bg/content" to="." method="_on_content_pressed"]
[connection signal="pressed" from="bg/wave1" to="." method="_on_wave1_pressed"]
[connection signal="pressed" from="bg/wave2" to="." method="_on_wave2_pressed"]
[connection signal="pressed" from="bg/wave3" to="." method="_on_wave3_pressed"]
[connection signal="pressed" from="bg/score" to="." method="_on_score_pressed"]
[connection signal="pressed" from="bg/cross" to="." method="_on_cross_pressed"]
